--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "symfony/symfony1",
-    "description": "Symfony is a complete framework designed to optimize the development of web applications by way of several key features.",
+    "name": "shop25/symfony",
+    "description": "Symfony 1.4 fork for PHP 7.4 and PHP 8.0",
     "license": "MIT",
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=7.4"
     }
 }
