Trying to use autoload through classmap

--- a/composer.json
+++ b/composer.json
@@ -4,5 +4,8 @@
     "license": "MIT",
     "require": {
         "php": ">=7.4"
+    },
+    "autoload": {
+        "classmap": ["lib/autoload/sfCoreAutoload.class.php"]
     }
 }
